# lumiscript

./: .gitignore  BYTECODE.md  CMakeLists.txt  Kconfig  LANGUAGE.md  README.md  example-animation.lumi  example-array.lumi  example-branching.lumi  example-conditional.lumi  example-counter.lumi  example-math.lumi  example-nested.lumi  example-rand.lumi  example-ripple.lumi  example-rounding.lumi  example-stateful.lumi  example-static.lumi  meson.build
include/lumi/: bytecode.h  compiler.h  vm.h
src/: bytecode.c  compiler.c  internal.h  lexer.c  lsp_main.c  main.c  parser.c  vm.c  vm_main.c
tests/: bytecode_assert.c  bytecode_assert_sections.c  compile_and_assert.sh  compile_and_assert_sections.sh  compile_and_run_vm.sh  compile_example.sh  compile_fail.sh  compile_optimization.sh  error-assign-let.lumi  error-dynamic-array-index.lumi  error-if-expr-no-else.lumi  error-missing-color.lumi  error-render-missing-else-color.lumi  error-unknown-symbol.lumi  lsp_smoke.sh  optimization-cse-expected.txt  optimization-cse-input.txt  optimization-cse.lumi  optimization-expected.txt  optimization-input.txt  optimization.lumi  run_vm_fail.sh  vm-array-expected.txt  vm-array-input.txt  vm-branching-expected.txt  vm-branching-input.txt  vm-counter-expected.txt  vm-counter-input.txt  vm-math-expected.txt  vm-math-input.txt  vm-rand-expected.txt  vm-rand-input.txt  vm-rounding-expected.txt  vm-rounding-input.txt  vm-static-expected.txt  vm-static-input.txt
zephyr/: module.yml
